tests/negative/neg_pr1112c_shared_reference_field.safe
package neg_pr1112c_shared_reference_field

   type node is record
      next : node

   type settings is record
      item : node

   shared cfg : settings
